# news-searcher

./: README.md
.github/workflow/: rust.yml
.github/workflows/: rust.yml
search-engine/: .env  .env_example  .gitignore  Cargo.toml  README.md  content.csv  mock_data.csv  summary.csv  title.csv
search-engine/migrations/: 2_articles.sql
search-engine/scripts/: start.sh
search-engine/src/: alpha_only_filter.rs  article.rs  lib.rs  main.rs  tantivy.rs  vncore.rs  wrapper.rs
ui/: package-lock.json  package.json  tsconfig.json
ui/src/pages/: index.js
ui/src/pages/beta/: index.js
ui/src/types/: constants.ts
