[package]
name = "search-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20" }
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0.75"
tantivy = "0.21.1"
tempfile = "3.8.1"
hyper = { version = "1.0.1", features = ["full"] }
tower = "0.4.13"
serde = "1.0.192"
sqlx = { version = "0.7.2", features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
    "uuid",
    "chrono",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde_json = "1.0.108"
csv = "1.3.0"
tower-http = { version = "0.4.4", features = ["cors"] }
http = "1.0.0"
